[package]
name = "psycial"
version = "0.2.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "MBTI personality prediction using psychological features and deep learning"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/psycial"
keywords = ["mbti", "personality", "nlp", "machine-learning", "psychology"]
categories = ["science", "text-processing"]

[lib]
name = "psycial"
path = "src/lib.rs"

[dependencies]
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
regex = "1.10"
ndarray = "0.16"
console = { version = "0.16", features = ["std"] }

# Deep learning dependencies  
rust-bert = { version = "0.22", optional = true, features = ["download-libtorch"] }

[features]
default = ["bert"]
bert = ["rust-bert"]

[[bin]]
name = "psycial"
path = "src/main.rs"
